@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.1.1.1 2007/01/03 15:06:02 obache Exp $
+$NetBSD: distinfo,v 1.2 2010/12/07 01:37:17 reed Exp $
 
-SHA1 (ipa_sdb-1.0.1.tar.bz2) = 3babf4d20e2ae0fd1c8958fdc34bff5e3d9e2db2
-RMD160 (ipa_sdb-1.0.1.tar.bz2) = 6824e8f0d11620d1e42912679dcb61e69e48b75e
-Size (ipa_sdb-1.0.1.tar.bz2) = 228701 bytes
+SHA1 (ipa_sdb-1.0.2.tar.bz2) = 71b1f1ce543edeff72451018645eb38b75d0f1b5
+RMD160 (ipa_sdb-1.0.2.tar.bz2) = 80b1a647970a9e942d9753c6c04d2b6cce152d3d
+Size (ipa_sdb-1.0.2.tar.bz2) = 255710 bytes
